--- a/Lectures/Week10/dev_int-L16_Nov4.html
+++ b/Lectures/Week10/dev_int-L16_Nov4.html
@@ -696,7 +696,7 @@ class: center, middle, inverse, title-slide
 - You can usually set it up through File ---&gt;  Site manager; or through “Quickconnect”
    - Domain/Host: 2024.philemerge.com
    - Port: 21
-  - Username and password in the [google doc]((https://docs.google.com/spreadsheets/d/1higBc6s4X7gOxslW2SvmVBFUVVkSrIV6tvxb1YclcYI/edit?usp=sharing)! 
+  - Username and password in the google doc! 
   
 ---
 
